# tauri-plugin-printer-v2

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  LICENSE  Notes.md  README.md  bun.lockb  package.json  tsconfig.json
lib/: constants.ts  index.ts  types.ts
src/: declare.rs  fsys.rs  lib.rs  windows.rs
test/: printer.test.js
